parser/tc_parser.go
// Code generated from tc.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // tc
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type tcParser struct {
	*antlr.BaseParser
}

var tcParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tcParserInit() {
	staticData := &tcParserStaticData
	staticData.literalNames = []string{
		"", "'['", "':'", "';;'", "']'", "'{'", "'}'", "'#'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "FUNC_NAME", "OPS", "NAME", "INTEGER",
		"DECIMAL_INTEGER", "FLOAT_NUMBER", "STRING", "OP", "MOD", "BLOCK_COMMENT",
		"WhiteSpace", "NewLine",
	}
	staticData.ruleNames = []string{
		"expressions", "root_term", "ns", "fun", "val", "ns_term", "fun_term",
		"pos_term",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// tcParserInit initializes any static state used to implement tcParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewtcParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TcParserInit() {
	staticData := &tcParserStaticData
	staticData.once.Do(tcParserInit)
}

// NewtcParser produces a new parser instance for the optional input antlr.TokenStream.
func NewtcParser(input antlr.TokenStream) *tcParser {
	TcParserInit()
	this := new(tcParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &tcParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "tc.g4"

	return this
}

// tcParser tokens.
const (
	tcParserEOF             = antlr.TokenEOF
	tcParserT__0            = 1
	tcParserT__1            = 2
	tcParserT__2            = 3
	tcParserT__3            = 4
	tcParserT__4            = 5
	tcParserT__5            = 6
	tcParserT__6            = 7
	tcParserFUNC_NAME       = 8
	tcParserOPS             = 9
	tcParserNAME            = 10
	tcParserINTEGER         = 11
	tcParserDECIMAL_INTEGER = 12
	tcParserFLOAT_NUMBER    = 13
	tcParserSTRING          = 14
	tcParserOP              = 15
	tcParserMOD             = 16
	tcParserBLOCK_COMMENT   = 17
	tcParserWhiteSpace      = 18
	tcParserNewLine         = 19
)

// tcParser rules.
const (
	tcParserRULE_expressions = 0
	tcParserRULE_root_term   = 1
	tcParserRULE_ns          = 2
	tcParserRULE_fun         = 3
	tcParserRULE_val         = 4
	tcParserRULE_ns_term     = 5
	tcParserRULE_fun_term    = 6
	tcParserRULE_pos_term    = 7
)

// IExpressionsContext is an interface to support dynamic dispatch.
type IExpressionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionsContext differentiates from other interfaces.
	IsExpressionsContext()
}

type ExpressionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionsContext() *ExpressionsContext {
	var p = new(ExpressionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_expressions
	return p
}

func (*ExpressionsContext) IsExpressionsContext() {}

func NewExpressionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionsContext {
	var p = new(ExpressionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_expressions

	return p
}

func (s *ExpressionsContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionsContext) AllRoot_term() []IRoot_termContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRoot_termContext); ok {
			len++
		}
	}

	tst := make([]IRoot_termContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRoot_termContext); ok {
			tst[i] = t.(IRoot_termContext)
			i++
		}
	}

	return tst
}

func (s *ExpressionsContext) Root_term(i int) IRoot_termContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRoot_termContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRoot_termContext)
}

func (s *ExpressionsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterExpressions(s)
	}
}

func (s *ExpressionsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitExpressions(s)
	}
}

func (p *tcParser) Expressions() (localctx IExpressionsContext) {
	this := p
	_ = this

	localctx = NewExpressionsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, tcParserRULE_expressions)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(19)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<tcParserT__0)|(1<<tcParserT__4)|(1<<tcParserT__6)|(1<<tcParserFUNC_NAME)|(1<<tcParserMOD))) != 0 {
		{
			p.SetState(16)
			p.Root_term()
		}

		p.SetState(21)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IRoot_termContext is an interface to support dynamic dispatch.
type IRoot_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRoot_termContext differentiates from other interfaces.
	IsRoot_termContext()
}

type Root_termContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRoot_termContext() *Root_termContext {
	var p = new(Root_termContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_root_term
	return p
}

func (*Root_termContext) IsRoot_termContext() {}

func NewRoot_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Root_termContext {
	var p = new(Root_termContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_root_term

	return p
}

func (s *Root_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Root_termContext) Fun() IFunContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunContext)
}

func (s *Root_termContext) Ns() INsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INsContext)
}

func (s *Root_termContext) Pos_term() IPos_termContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPos_termContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPos_termContext)
}

func (s *Root_termContext) Val() IValContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValContext)
}

func (s *Root_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Root_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Root_termContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterRoot_term(s)
	}
}

func (s *Root_termContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitRoot_term(s)
	}
}

func (p *tcParser) Root_term() (localctx IRoot_termContext) {
	this := p
	_ = this

	localctx = NewRoot_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, tcParserRULE_root_term)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(26)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case tcParserFUNC_NAME, tcParserMOD:
		{
			p.SetState(22)
			p.Fun()
		}

	case tcParserT__0:
		{
			p.SetState(23)
			p.Ns()
		}

	case tcParserT__6:
		{
			p.SetState(24)
			p.Pos_term()
		}

	case tcParserT__4:
		{
			p.SetState(25)
			p.Val()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// INsContext is an interface to support dynamic dispatch.
type INsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetNsname returns the nsname token.
	GetNsname() antlr.Token

	// SetNsname sets the nsname token.
	SetNsname(antlr.Token)

	// Get_ns_term returns the _ns_term rule contexts.
	Get_ns_term() INs_termContext

	// Set_ns_term sets the _ns_term rule contexts.
	Set_ns_term(INs_termContext)

	// GetParam returns the param rule context list.
	GetParam() []INs_termContext

	// SetParam sets the param rule context list.
	SetParam([]INs_termContext)

	// IsNsContext differentiates from other interfaces.
	IsNsContext()
}

type NsContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	nsname   antlr.Token
	_ns_term INs_termContext
	param    []INs_termContext
}

func NewEmptyNsContext() *NsContext {
	var p = new(NsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_ns
	return p
}

func (*NsContext) IsNsContext() {}

func NewNsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NsContext {
	var p = new(NsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_ns

	return p
}

func (s *NsContext) GetParser() antlr.Parser { return s.parser }

func (s *NsContext) GetNsname() antlr.Token { return s.nsname }

func (s *NsContext) SetNsname(v antlr.Token) { s.nsname = v }

func (s *NsContext) Get_ns_term() INs_termContext { return s._ns_term }

func (s *NsContext) Set_ns_term(v INs_termContext) { s._ns_term = v }

func (s *NsContext) GetParam() []INs_termContext { return s.param }

func (s *NsContext) SetParam(v []INs_termContext) { s.param = v }

func (s *NsContext) FUNC_NAME() antlr.TerminalNode {
	return s.GetToken(tcParserFUNC_NAME, 0)
}

func (s *NsContext) AllNs_term() []INs_termContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INs_termContext); ok {
			len++
		}
	}

	tst := make([]INs_termContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INs_termContext); ok {
			tst[i] = t.(INs_termContext)
			i++
		}
	}

	return tst
}

func (s *NsContext) Ns_term(i int) INs_termContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INs_termContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INs_termContext)
}

func (s *NsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterNs(s)
	}
}

func (s *NsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitNs(s)
	}
}

func (p *tcParser) Ns() (localctx INsContext) {
	this := p
	_ = this

	localctx = NewNsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, tcParserRULE_ns)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(28)
		p.Match(tcParserT__0)
	}
	{
		p.SetState(29)

		var _m = p.Match(tcParserFUNC_NAME)

		localctx.(*NsContext).nsname = _m
	}
	{
		p.SetState(30)
		p.Match(tcParserT__1)
	}
	p.SetState(34)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<tcParserT__0)|(1<<tcParserT__4)|(1<<tcParserT__6)|(1<<tcParserFUNC_NAME)|(1<<tcParserMOD))) != 0 {
		{
			p.SetState(31)

			var _x = p.Ns_term()

			localctx.(*NsContext)._ns_term = _x
		}
		localctx.(*NsContext).param = append(localctx.(*NsContext).param, localctx.(*NsContext)._ns_term)

		p.SetState(36)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(37)
		p.Match(tcParserT__2)
	}

	return localctx
}

// IFunContext is an interface to support dynamic dispatch.
type IFunContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetMod returns the mod token.
	GetMod() antlr.Token

	// GetFname returns the fname token.
	GetFname() antlr.Token

	// SetMod sets the mod token.
	SetMod(antlr.Token)

	// SetFname sets the fname token.
	SetFname(antlr.Token)

	// Get_fun_term returns the _fun_term rule contexts.
	Get_fun_term() IFun_termContext

	// Set_fun_term sets the _fun_term rule contexts.
	Set_fun_term(IFun_termContext)

	// GetParam returns the param rule context list.
	GetParam() []IFun_termContext

	// SetParam sets the param rule context list.
	SetParam([]IFun_termContext)

	// IsFunContext differentiates from other interfaces.
	IsFunContext()
}

type FunContext struct {
	*antlr.BaseParserRuleContext
	parser    antlr.Parser
	mod       antlr.Token
	fname     antlr.Token
	_fun_term IFun_termContext
	param     []IFun_termContext
}

func NewEmptyFunContext() *FunContext {
	var p = new(FunContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_fun
	return p
}

func (*FunContext) IsFunContext() {}

func NewFunContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunContext {
	var p = new(FunContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_fun

	return p
}

func (s *FunContext) GetParser() antlr.Parser { return s.parser }

func (s *FunContext) GetMod() antlr.Token { return s.mod }

func (s *FunContext) GetFname() antlr.Token { return s.fname }

func (s *FunContext) SetMod(v antlr.Token) { s.mod = v }

func (s *FunContext) SetFname(v antlr.Token) { s.fname = v }

func (s *FunContext) Get_fun_term() IFun_termContext { return s._fun_term }

func (s *FunContext) Set_fun_term(v IFun_termContext) { s._fun_term = v }

func (s *FunContext) GetParam() []IFun_termContext { return s.param }

func (s *FunContext) SetParam(v []IFun_termContext) { s.param = v }

func (s *FunContext) FUNC_NAME() antlr.TerminalNode {
	return s.GetToken(tcParserFUNC_NAME, 0)
}

func (s *FunContext) MOD() antlr.TerminalNode {
	return s.GetToken(tcParserMOD, 0)
}

func (s *FunContext) AllFun_term() []IFun_termContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFun_termContext); ok {
			len++
		}
	}

	tst := make([]IFun_termContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFun_termContext); ok {
			tst[i] = t.(IFun_termContext)
			i++
		}
	}

	return tst
}

func (s *FunContext) Fun_term(i int) IFun_termContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFun_termContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFun_termContext)
}

func (s *FunContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterFun(s)
	}
}

func (s *FunContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitFun(s)
	}
}

func (p *tcParser) Fun() (localctx IFunContext) {
	this := p
	_ = this

	localctx = NewFunContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, tcParserRULE_fun)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == tcParserMOD {
		{
			p.SetState(39)

			var _m = p.Match(tcParserMOD)

			localctx.(*FunContext).mod = _m
		}

	}
	{
		p.SetState(42)

		var _m = p.Match(tcParserFUNC_NAME)

		localctx.(*FunContext).fname = _m
	}
	p.SetState(51)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(43)
			p.Match(tcParserT__0)
		}
		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<tcParserT__4)|(1<<tcParserT__6)|(1<<tcParserFUNC_NAME)|(1<<tcParserMOD))) != 0 {
			{
				p.SetState(44)

				var _x = p.Fun_term()

				localctx.(*FunContext)._fun_term = _x
			}
			localctx.(*FunContext).param = append(localctx.(*FunContext).param, localctx.(*FunContext)._fun_term)

			p.SetState(49)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(50)
			p.Match(tcParserT__3)
		}

	}

	return localctx
}

// IValContext is an interface to support dynamic dispatch.
type IValContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetP returns the p token.
	GetP() antlr.Token

	// SetP sets the p token.
	SetP(antlr.Token)

	// GetFname returns the fname rule contexts.
	GetFname() IFunContext

	// SetFname sets the fname rule contexts.
	SetFname(IFunContext)

	// IsValContext differentiates from other interfaces.
	IsValContext()
}

type ValContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	fname  IFunContext
	p      antlr.Token
}

func NewEmptyValContext() *ValContext {
	var p = new(ValContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_val
	return p
}

func (*ValContext) IsValContext() {}

func NewValContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValContext {
	var p = new(ValContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_val

	return p
}

func (s *ValContext) GetParser() antlr.Parser { return s.parser }

func (s *ValContext) GetP() antlr.Token { return s.p }

func (s *ValContext) SetP(v antlr.Token) { s.p = v }

func (s *ValContext) GetFname() IFunContext { return s.fname }

func (s *ValContext) SetFname(v IFunContext) { s.fname = v }

func (s *ValContext) Fun() IFunContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunContext)
}

func (s *ValContext) FUNC_NAME() antlr.TerminalNode {
	return s.GetToken(tcParserFUNC_NAME, 0)
}

func (s *ValContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterVal(s)
	}
}

func (s *ValContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitVal(s)
	}
}

func (p *tcParser) Val() (localctx IValContext) {
	this := p
	_ = this

	localctx = NewValContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, tcParserRULE_val)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(tcParserT__4)
	}
	{
		p.SetState(54)

		var _x = p.Fun()

		localctx.(*ValContext).fname = _x
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == tcParserFUNC_NAME {
		{
			p.SetState(55)

			var _m = p.Match(tcParserFUNC_NAME)

			localctx.(*ValContext).p = _m
		}

	}
	{
		p.SetState(58)
		p.Match(tcParserT__5)
	}

	return localctx
}

// INs_termContext is an interface to support dynamic dispatch.
type INs_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNs_termContext differentiates from other interfaces.
	IsNs_termContext()
}

type Ns_termContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNs_termContext() *Ns_termContext {
	var p = new(Ns_termContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_ns_term
	return p
}

func (*Ns_termContext) IsNs_termContext() {}

func NewNs_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Ns_termContext {
	var p = new(Ns_termContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tcParserRULE_ns_term

	return p
}

func (s *Ns_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Ns_termContext) Fun() IFunContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunContext)
}

func (s *Ns_termContext) Ns() INsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INsContext)
}

func (s *Ns_termContext) Pos_term() IPos_termContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPos_termContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPos_termContext)
}

func (s *Ns_termContext) Val() IValContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValContext)
}

func (s *Ns_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Ns_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Ns_termContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.EnterNs_term(s)
	}
}

func (s *Ns_termContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tcListener); ok {
		listenerT.ExitNs_term(s)
	}
}

func (p *tcParser) Ns_term() (localctx INs_termContext) {
	this := p
	_ = this

	localctx = NewNs_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, tcParserRULE_ns_term)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(64)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case tcParserFUNC_NAME, tcParserMOD:
		{
			p.SetState(60)
			p.Fun()
		}

	case tcParserT__0:
		{
			p.SetState(61)
			p.Ns()
		}

	case tcParserT__6:
		{
			p.SetState(62)
			p.Pos_term()
		}

	case tcParserT__4:
		{
			p.SetState(63)
			p.Val()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IFun_termContext is an interface to support dynamic dispatch.
type IFun_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFun_termContext differentiates from other interfaces.
	IsFun_termContext()
}

type Fun_termContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFun_termContext() *Fun_termContext {
	var p = new(Fun_termContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tcParserRULE_fun_term
	return p
}
